Switch to gradle, and build for Java 16